# alc-rc

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: loop.rs  score_sequence.rs
performance/: 0_0_1-1000pop-ngram_to_sequence_cloning.txt  0_0_1-1000pop-ngram_to_sequence_copying.txt  0_1_0.txt  0_1_1.txt  0_1_2-scoring-loop-all-ngram-sizes.txt  0_1_2-small-ngrams.txt  0_1_2.txt
src/: alc_error.rs  keyboard.rs  lib.rs  main.rs  optimizer.rs  text_processor.rs
src/keyboard/: default_layouts.rs  key.rs  layer.rs  layout.rs  layout_presets.rs
src/objective/: scoring.rs
src/optimizer/: config.rs  optimizer_presets.rs
src/text_processor/: dataset.rs  frequency_holder.rs  keycode.rs  misc.rs  ngram.rs
templates/: 2x4.toml  5x6.toml  ferris_sweep.toml  ferris_sweep_manual.toml  from_lo.toml  test.toml
test_layouts/: 0_1_3-4x10.txt
tests/: text_processor_test.rs
