[package]
name = "alc"
version = "0.1.3"
edition = "2021"

[profile.release]
debug = true

[dependencies]
array2d = "0.3.2"
clap = { version = "4.5.4", features = ["derive"] }
delegate = "0.12.0"
dirs = "5.0.1"
divan = "0.1.14"
erased-serde = "0.4.4"
json = "0.12.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
regex = "1.10.4"
ron = "0.8.1"
serde = "1.0.198"
serde_derive = "1.0.199"
serde_json = "1.0.117"
serde_json_any_key = "2.0.0"
serde_with = { version = "3.8.1", features = ["json"] }
shellexpand = "3.1.0"
struct_iterable = "0.1.1"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.58"
toml = "0.8.12"
tqdm = "0.7.0"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "loop"
harness = false
[[bench]]
name = "score_sequence"
harness = false
